--- a/src/ArchiDesignPatterns.Mobile/Resources/Styles/Colors.xaml
+++ b/src/ArchiDesignPatterns.Mobile/Resources/Styles/Colors.xaml
@@ -3,37 +3,39 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <!-- Primary Brand Colors -->
-    <Color x:Key="Primary">#5048E5</Color>
-    <Color x:Key="PrimaryDark">#3730A3</Color>
-    <Color x:Key="PrimaryLight">#9F7AEA</Color>
-    <Color x:Key="PrimaryDarkText">#1A202C</Color>
+    <!-- Primary Brand Colors - Blue Theme -->
+    <Color x:Key="Primary">#20A4F3</Color>
+    <Color x:Key="PrimaryDark">#1B8CD4</Color>
+    <Color x:Key="PrimaryLight">#4DB8F5</Color>
+    <Color x:Key="PrimaryDarkText">#0D4A6B</Color>
     
-    <Color x:Key="Secondary">#7C3AED</Color>
-    <Color x:Key="SecondaryDark">#5521B5</Color>
-    <Color x:Key="SecondaryLight">#A78BFA</Color>
-    <Color x:Key="SecondaryDarkText">#805AD5</Color>
+    <!-- Secondary Brand Colors - Green Theme -->
+    <Color x:Key="Secondary">#62D26F</Color>
+    <Color x:Key="SecondaryDark">#4AB558</Color>
+    <Color x:Key="SecondaryLight">#82DD8C</Color>
+    <Color x:Key="SecondaryDarkText">#2E6636</Color>
     
-    <Color x:Key="Tertiary">#E53E3E</Color>
-    <Color x:Key="TertiaryDark">#C53030</Color>
-    <Color x:Key="TertiaryLight">#FBB6CE</Color>
+    <!-- Tertiary Colors - Accent -->
+    <Color x:Key="Tertiary">#F39C12</Color>
+    <Color x:Key="TertiaryDark">#D68910</Color>
+    <Color x:Key="TertiaryLight">#F5B041</Color>
 
     <!-- Pattern Category Colors with better contrast -->
-    <Color x:Key="CreationalPattern">#059669</Color>
-    <Color x:Key="StructuralPattern">#2563EB</Color>
-    <Color x:Key="BehavioralPattern">#D97706</Color>
-    <Color x:Key="ArchitecturePattern">#7C3AED</Color>
-    <Color x:Key="SOLIDPrinciple">#0891B2</Color>
+    <Color x:Key="CreationalPattern">#62D26F</Color>
+    <Color x:Key="StructuralPattern">#20A4F3</Color>
+    <Color x:Key="BehavioralPattern">#F39C12</Color>
+    <Color x:Key="ArchitecturePattern">#9B59B6</Color>
+    <Color x:Key="SOLIDPrinciple">#1ABC9C</Color>
     
     <!-- Semantic Colors -->
-    <Color x:Key="Success">#059669</Color>
-    <Color x:Key="SuccessDark">#047857</Color>
-    <Color x:Key="Warning">#D97706</Color>
-    <Color x:Key="WarningDark">#B45309</Color>
-    <Color x:Key="Error">#DC2626</Color>
-    <Color x:Key="ErrorDark">#B91C1C</Color>
-    <Color x:Key="Info">#2563EB</Color>
-    <Color x:Key="InfoDark">#1D4ED8</Color>
+    <Color x:Key="Success">#62D26F</Color>
+    <Color x:Key="SuccessDark">#4AB558</Color>
+    <Color x:Key="Warning">#F39C12</Color>
+    <Color x:Key="WarningDark">#D68910</Color>
+    <Color x:Key="Error">#E74C3C</Color>
+    <Color x:Key="ErrorDark">#C0392B</Color>
+    <Color x:Key="Info">#20A4F3</Color>
+    <Color x:Key="InfoDark">#1B8CD4</Color>
 
     <!-- Neutral Colors -->
     <Color x:Key="White">#FFFFFF</Color>
